--- a/Foodie/Views/Base.lproj/Main.storyboard
+++ b/Foodie/Views/Base.lproj/Main.storyboard
@@ -229,13 +229,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="xY0-OU-oPF"/>
                     </view>
-                    <navigationItem key="navigationItem" id="xAf-6T-EuU">
-                        <barButtonItem key="rightBarButtonItem" title="Test Next" id="a3p-7p-NRh">
-                            <connections>
-                                <segue destination="UbG-lA-RM1" kind="show" id="8cV-PK-aIm"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="xAf-6T-EuU"/>
                     <connections>
                         <outlet property="imageView" destination="340-78-fmQ" id="zyv-9E-MxC"/>
                         <outlet property="infoLabel" destination="cCx-rd-oEX" id="UEp-dq-nyu"/>
@@ -245,16 +239,16 @@
             </objects>
             <point key="canvasLocation" x="3853" y="23"/>
         </scene>
-        <!--View Controller-->
+        <!--Restaurant Controller-->
         <scene sceneID="n2D-ku-pat">
             <objects>
-                <viewController id="UbG-lA-RM1" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="restaurantController" id="UbG-lA-RM1" customClass="RestaurantController" customModule="Foodie" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="blM-g8-nRr">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hFC-1u-Hwn">
-                                <rect key="frame" x="0.0" y="88" width="375" height="181"/>
+                                <rect key="frame" x="0.0" y="44" width="375" height="181"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="hFC-1u-Hwn" secondAttribute="height" multiplier="375:181" id="4OS-O3-aKW"/>
                                     <constraint firstAttribute="height" constant="181" id="TR6-LC-7af"/>
@@ -262,7 +256,7 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurant Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BCb-aS-aCT">
-                                <rect key="frame" x="10" y="289" width="179" height="29"/>
+                                <rect key="frame" x="10" y="245" width="179" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="29" id="SMN-K4-MKA"/>
                                     <constraint firstAttribute="height" constant="29" id="VI8-Jr-yEG"/>
@@ -272,7 +266,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hT9-Lv-use">
-                                <rect key="frame" x="186" y="348.66666666666669" width="41" height="29"/>
+                                <rect key="frame" x="186" y="304.66666666666669" width="41" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="29" id="iCi-PJ-LTA"/>
                                 </constraints>
@@ -281,7 +275,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rating5" translatesAutoresizingMaskIntoConstraints="NO" id="R7E-pY-gV8">
-                                <rect key="frame" x="10" y="318" width="168" height="90"/>
+                                <rect key="frame" x="10" y="274" width="168" height="90"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="168" id="dIQ-LO-ndb"/>
                                     <constraint firstAttribute="height" constant="90" id="rPV-Qe-eun"/>
@@ -289,7 +283,7 @@
                                 <viewLayoutGuide key="safeArea" id="hkk-0a-UbN"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rMK-fO-xeo">
-                                <rect key="frame" x="235" y="348" width="90" height="30"/>
+                                <rect key="frame" x="235" y="304" width="90" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="XTe-VZ-XMG"/>
                                 </constraints>
@@ -298,7 +292,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JOy-Pr-RbT">
-                                <rect key="frame" x="223" y="269" width="114" height="66"/>
+                                <rect key="frame" x="223" y="225" width="114" height="66"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="114" id="c17-qy-Fix"/>
                                     <constraint firstAttribute="height" constant="66" id="twS-vo-ZRa"/>
@@ -306,7 +300,7 @@
                                 <state key="normal" title="Button" image="YelpTM"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Open" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PwR-VF-gGi">
-                                <rect key="frame" x="10" y="416" width="48" height="24"/>
+                                <rect key="frame" x="10" y="372" width="48" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="EbP-cd-lOc"/>
                                 </constraints>
@@ -315,7 +309,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Pw-gZ-6D7">
-                                <rect key="frame" x="10" y="448" width="72" height="24"/>
+                                <rect key="frame" x="10" y="404" width="72" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="1wR-cL-5Vp"/>
                                 </constraints>
@@ -324,7 +318,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City State Zip" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DZZ-8o-vEh">
-                                <rect key="frame" x="10" y="480" width="118" height="24"/>
+                                <rect key="frame" x="10" y="436" width="118" height="24"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="24" id="Y8w-s1-DVp"/>
                                 </constraints>
@@ -377,6 +371,14 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wXY-tP-W8T"/>
                     </view>
+                    <connections>
+                        <outlet property="addressLabel" destination="2Pw-gZ-6D7" id="tMS-SK-4D3"/>
+                        <outlet property="availabilityLabel" destination="PwR-VF-gGi" id="fTS-go-8Oi"/>
+                        <outlet property="cityStateZipLabel" destination="DZZ-8o-vEh" id="Zr5-sK-hhL"/>
+                        <outlet property="nameLabel" destination="BCb-aS-aCT" id="z4E-b4-VgZ"/>
+                        <outlet property="ratingImage" destination="R7E-pY-gV8" id="m8X-fL-egX"/>
+                        <outlet property="reviewsLabel" destination="hT9-Lv-use" id="X3r-Xt-Slv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eZw-fh-jPg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
